--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "resend": "^3.0.0",
+    "sonner": "^2.0.7",
     "stripe": "^14.0.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
