--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
     "buildCommand": "npm run build",
     "outputDirectory": ".next",
     "installCommand": "npm install",
-    "devCommand": "npm run dev"
+    "devCommand": "npm run dev",
+    "crons": [
+      {
+        "path": "/api/recurring-work-orders/cron",
+        "schedule": "0 9 * * *"
+      }
+    ]
   }
   
