--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -38,7 +42,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/d3": "^7.4.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.0",
     "@types/react": "^18.3.0",
@@ -46,8 +54,11 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.2.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.2.0"
   }
 }
