--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -55,6 +56,7 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.2.0",
     "jest": "^30.2.0",
+    "jest-circus": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
