Fix 413 error: increase API payload limit to 10MB

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,12 @@
         "path": "/api/recurring-work-orders/cron",
         "schedule": "0 9 * * *"
       }
-    ]
+    ],
+    "functions": {
+      "app/api/maint-requests/route.ts": {
+        "maxDuration": 60,
+        "memory": 1024
+      }
+    }
   }
   
