--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "resend": "^3.0.0",
+    "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "stripe": "^14.0.0",
     "tailwind-merge": "^2.0.0",
