--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --watchAll=false"
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:unit": "jest __tests__/unit",
+    "test:smoke": "jest __tests__/smoke",
+    "test:performance": "jest __tests__/performance",
+    "test:acceptance": "jest __tests__/acceptance",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run test:unit && npm run test:smoke && npm run test:acceptance"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.19",
@@ -37,6 +44,7 @@
     "jspdf": "^2.5.0",
     "lucide-react": "^0.292.0",
     "next": "^14.2.0",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -48,6 +56,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@swc/jest": "^0.2.39",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -64,6 +73,7 @@
     "jest": "^30.2.0",
     "jest-circus": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "playwright": "^1.56.1",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.4.5",
