--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "sonner": "^2.0.7",
     "stripe": "^14.0.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
@@ -64,15 +67,12 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "^14.2.0",
     "jest": "^30.2.0",
     "jest-circus": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "playwright": "^1.56.1",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.2.0"
   }
