--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "tailwindcss-animate": "^1.0.7",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
@@ -73,7 +74,6 @@
     "jest-circus": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "playwright": "^1.56.1",
-    "ts-jest": "^29.4.5",
-    "typescript": "^5.2.0"
+    "ts-jest": "^29.4.5"
   }
 }
