--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
@@ -71,8 +73,6 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.0",
     "jest": "^30.2.0",
     "jest-circus": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
