--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@sendgrid/mail": "^8.1.0",
     "@stripe/stripe-js": "^3.0.0",
+    "@types/papaparse": "^5.5.2",
     "autoprefixer": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "d3": "^7.8.0",
     "date-fns": "^3.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.0",
     "firebase": "^10.7.0",
     "firebase-admin": "^12.0.0",
     "html2canvas": "^1.4.0",
@@ -46,6 +49,7 @@
     "lucide-react": "^0.292.0",
     "next": "^14.2.0",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "pdf-parse": "^2.4.5",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
@@ -57,9 +61,7 @@
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.0",
-    "xlsx": "^0.18.5",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
